Rework how arguments are parsed